# fap-balls

./: .vimprj_fap_balls  ChangeLog  configure.ac
debian/: README.Debian  changelog  control
doc/: FAPTST_BALL_LLD_001.doc  FAPTST_BALL_LLD_SHM.vsd  stas1.docm  stas1.docx  stas1.rtf
doc/fap-balls-mdl/: 134658.diagram  2.session  fap-balls-mdl.prj
src/: Makefile.am  fap-balls  fap-balls-model.cpp  fap-balls-model.h  fap-balls-spec.xml  fapwstsob.cpp  fapwstsob.h  fapwstst1.cpp  fapwstst1qt.h  main.cpp
